--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,5 @@
-object.not.exists = Object with id {0} does not exist.
+object.not.exists=Object with id {0} does not exist.
+object.database.insert.error=Error when trying to insert record id {0}.
+object.insert.success=Created new register 
+object.update.success=Updated register 
+object.delete.success=Deleted register 
