--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -1,1 +1,5 @@
-object.not.exists = Objeto com o id {0} não existe.
+object.not.exists=Objeto com o id {0} não existe.
+object.database.insert.error=Erro ao tentar inserir o registro. Id {0}.
+object.insert.success=Criado novo registro 
+object.update.success=Atualizado registro 
+object.delete.success=Apagado registro 
